--- a/5a-Geocoding-With-OSM.ipynb
+++ b/5a-Geocoding-With-OSM.ipynb
@@ -23,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Import the request module\n",
@@ -46,10 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Get the address\n",
@@ -67,10 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Form the request\n",
@@ -87,10 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Send the request\n",
@@ -106,18 +98,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://nominatim.openstreetmap.org/search?format=json&q=9+Circuit+Drive%2C+Durham%2C+NC%2C+27708'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Opens the URL as an html response (vs JSON) in a web browser...\n",
     "import webbrowser\n",
@@ -133,10 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Read in the response as a JSON encoded object\n",
@@ -152,9 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'boundingbox': ['36.0051837', '36.0056447', '-78.942479', '-78.9415654'],\n",
+      "  'class': 'amenity',\n",
+      "  'display_name': '9, Circuit Drive, Crest Street, Durham, Durham County, '\n",
+      "                  'North Carolina, 27705, USA',\n",
+      "  'importance': 0.42099999999999993,\n",
+      "  'lat': '36.00541855',\n",
+      "  'licence': 'Data © OpenStreetMap contributors, ODbL 1.0. '\n",
+      "             'https://osm.org/copyright',\n",
+      "  'lon': '-78.9420353747387',\n",
+      "  'osm_id': '47131509',\n",
+      "  'osm_type': 'way',\n",
+      "  'place_id': '88199029',\n",
+      "  'type': 'parking'}]\n"
+     ]
+    }
+   ],
    "source": [
     "from pprint import pprint\n",
     "pprint(jsonObj)"
@@ -169,12 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['place_id', 'licence', 'osm_type', 'osm_id', 'boundingbox', 'lat', 'lon', 'display_name', 'class', 'type', 'importance'])\n"
+     ]
+    }
+   ],
    "source": [
     "dataDict = jsonObj[0]\n",
-    "print dataDict.keys()"
+    "print (dataDict.keys())"
    ]
   },
   {
@@ -186,14 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.00541855 -78.9420353747387\n"
+     ]
+    }
+   ],
    "source": [
     "d = jsonObj[0]\n",
     "lat = d['lat']\n",
     "lng = d['lon']\n",
-    "print lat, lng"
+    "print (lat, lng)"
    ]
   },
   {
@@ -207,12 +255,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The address 9 Circuit Drive, Durham, NC, 27708 is located at\n",
+      "36.00541855° Lat, -78.9420353747387° Lon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"The address {0} is located at\\n{1}° Lat, {2}° Lon\".format(address,lat,lng))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print \"The address {0} is located at\\n{1}° Lat, {2}° Lon\".format(address,lat,lng)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
