--- a/5b-Geocoding-With-OSM-in-bulk.ipynb
+++ b/5b-Geocoding-With-OSM-in-bulk.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Import the requests module\n",
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Create a function that will invoke the OSM API to return coordinates for an address\n",
-    "def getCoord(street,city,state,zip):\n",
+    "def getCoord(street,city,state,zipCode):\n",
     "    #Form the address\n",
-    "    address = \"{0} {1} {2} {3}\".format(street,town,state,zipcode)\n",
+    "    address = \"{0} {1} {2} {3}\".format(street,town,state,zipCode)\n",
     "    #Form the request\n",
     "    osmURL = 'http://nominatim.openstreetmap.org/search'\n",
     "    params = {'format':'json','q':address} \n",
@@ -65,34 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([u'County Name Of Facility Location', u'Facility Name', u'Facility Type',\n",
-       "       u'Phone Number', u'Permit Type', u'Email Address',\n",
-       "       u'Location Address Line 1', u'Location City', u'Location State',\n",
-       "       u'Location Zip Code', u'Full Address ', u'Mailing Address Line 1',\n",
-       "       u'Mailing City', u'Mailing State', u'Mailing Zip Code'],\n",
+       "Index(['County Name Of Facility Location', 'Facility Name', 'Facility Type',\n",
+       "       'Phone Number', 'Permit Type', 'Email Address',\n",
+       "       'Location Address Line 1', 'Location City', 'Location State',\n",
+       "       'Location Zip Code', 'Full Address ', 'Mailing Address Line 1',\n",
+       "       'Mailing City', 'Mailing State', 'Mailing Zip Code'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Pull in the excel spreadsheet as a pandas dataframe\n",
-    "df = pd.read_excel('../data/Childcare_Facilities.xlsx',index_col='Facility ID')\n",
+    "df = pd.read_excel('./data/Childcare_Facilities.xlsx',index_col='Facility ID')\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +97,7 @@
        "(6298, 4)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,11 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-adbd12a443dd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-adbd12a443dd>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df['Coords'] = df[]\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "df['Coords'] = df[]\n",
     ".apply(lambda row: getCoord(row['']))"
@@ -208,21 +211,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
